tools/crates/vendor/toml_edit/tests/fixtures/invalid/array/no-close-1.stderr
TOML parse error at line 1, column 24
  |
1 | no-close-1 = [ 1, 2, 3
  |                        ^
invalid array
expected `]`
